fix legend spacing

--- a/react-front/src/Display.module.scss
+++ b/react-front/src/Display.module.scss
@@ -96,8 +96,8 @@
     display: flex;
     flex-direction: column;
     .chart {
-      height: 35vh;
-      width: 240px;
+      height: 50vh;
+      width: 280px;
     }
     .user {
       height: 50vh;
